--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Alura Space</h1>
+    <h1>Alura Space! Deploy via GithubPages</h1>
 </body>
 </html>
