--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -1,3 +1,6 @@
+<!-- Embedando código pyhton para carregamento dos arquivos estáticos -->
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -9,7 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <!-- Embedando código python para carregamento do arquivo estático styles.css -->
+    <link rel="stylesheet" href="{% static '/styles/style.css' %}">
 </head>
 
 <body>
