--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -55,7 +55,9 @@
                         <h2 class="cards__titulo">Navegue pela galeria</h2>
                         <ul class="cards__lista">
                             <li class="card">
-                                <a href="imagem.html">
+                                <!-- Modificação para que a rota seja acessada. Fiz diferente do que foi ensinado pois assim funciona-->
+                                <!-- <a href="imagem.html"> -->
+                                <a href="imagem">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png ' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -70,7 +72,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="imagem">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -85,7 +87,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="imagem">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -100,7 +102,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="imagem">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -115,7 +117,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="imagem">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -130,7 +132,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="imagem">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
