--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -1,7 +1,9 @@
 <!-- Indica que o código abaixo estende/herda o código de base.haml -->
 {% extends 'galeria/base.html' %}
+<!-- Embedando código pyhton para carregamento dos arquivos estáticos -->
 {% load static %}
 {% block content %}
+
    <div class="pagina-inicial">
         <header class="cabecalho">
             <img src="{% static '/assets/logo/Logo(2).png' %}" alt="Logo da Alura Space" />
@@ -137,16 +139,5 @@
             </section>
         </main>
     </div>
-    <footer class="rodape">
-        <div class="rodape__icones">
-            <a href="https://twitter.com/AluraOnline" target=”_blank” >
-                <img src="{% static '/assets/ícones/1x/twitter.png' %}" alt="ícone twitter">
-            </a>
-            <a href="https://www.instagram.com/aluraonline/" target=”_blank” >
-                <img src="{% static '/assets/ícones/1x/instagram.png' %}" alt="ícone instagram">
-            </a>
-        </div>
-        <p class="rodape__texto">Desenvolvido por Alura e implementado por Marcus Vieira</p>
-    </footer>
 
 {% endblock %}
