--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -14,11 +14,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
     <!-- Embedando código python para carregamento do arquivo estático styles.css -->
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-
 </head>
 
 <body>
-    {% block content %}{% endblock %}
+    <header>
+        {% include 'galeria/partials/_header.html' %}
+    </header>
+    <main class="principal">
+        {% include 'galeria/partials/_menulateral.html' %}
+        {% block content %}{% endblock %}
+    </main>
     {% include 'galeria/partials/_footer.html' %}
 </body>
 </html>
